<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Safe\'O\'Fresh</string>
    <string-array name="arr_qty_type">
        <item>Box</item>
        <item>Pieces</item>
        <item>KG</item>

    </string-array>
    <string-array name="arr_filter">
        <item>All</item>
        <item>Scanned Items</item>
        <item>Unmatched Items</item>
        <item>Pending Scan Items</item>
        <item>Extra Scan Items</item>
    </string-array>
    <string-array name="tax_type">
        <item>Without Tax</item>
        <item>With Tax</item>
    </string-array>
    <string name="all_item_api">http://mmthinkbiz.com/MobileService.aspx?method=All_Item_Master_web</string>
    <string name="all_cust_api">http://mmthinkbiz.com/Mobileservice.aspx?method=AllGetCustomerAPI_Web</string>
    <string name="URL_UPLOAD_GRDETAIL">http://mmthinkbiz.com/MobileService.aspx/getds?method=CreateGR_Detail</string>
    <string name="URL_UPLOAD_GRMASTER">http://mmthinkbiz.com/MobileService.aspx/getds?method=CreateGR_Master</string>
    <string name="URL_GET_BILLABLE_CLIENT_NAME">http://mmthinkbiz.com/MobileService.aspx/getds?method=getbillableclientname</string>
    <string name="URL_BASE_URL">https://vehicletrack.membocool.com/Safeobuddy.aspx?method=apss</string>
    <string name="URL_ALL_VEHICLE_LOCATION">method=allvehiclelocation</string>
    <string name="URL_GET_BRANCH">method=GetBranchList</string>
    <string name="URL_OPEN_GATE">method=StartStopVehicleOpenGate</string>
    <string name="URL_GET_CLIENT">method=getbillableclientname</string>
    <string name="URL_LOGIN_ENC">method=LoginValidation1</string>
    <string name="URL_OTP_LOGIN">method=otplogin</string>
    <string name="CREATE_ORDER_DETAIL">method=CreateOrderDetail</string>
    <string name="CREATE_MASTER_ORDER">method=CreateOrderMaster</string>
    <string name="CREATE_MASTER_CARTITEMS">method=CreateCartItems</string>
    <string name="google_maps_key1">AIzaSyA60PqhDKX4x4AJk26I_GBQ5qlI6NWUS6I</string>
    <string name="URL_NOTIFICATION_REGISTER">http://mmthinkbiz.com/MobileService.aspx?method=GCMRegister</string>
    <string name="URL_EMPLOYEE_COORDINATES">http://mmthinkbiz.com/MobileService.aspx/NewRegistration?method=Getemployeecoordinates</string>
    <string name="UPDATE_ORDER_STATUS">method=updateorderstatus_new</string>
    <string name="CREATE_ORDER_ITEMS">method=CreateItems</string>
    <string name="GET_MODE">method=Getmode</string>
    <string name="GET_TIME_SLOT_NEW">method=GetDeliveryTimeSlot</string>
    <string name="GET_DELIVERY_DATE">method=GetDeliverydate</string>
    <string name="payment_credit_card_number_hint">Card Number</string>
    <string name="payment_expiration_hint">MM/YY</string>
    <string name="payment_credit_card_cvc_hint">CVC</string>
    <string name="payment_intent_status">PaymentIntent status: %s</string>
    <string name="setup_intent_status">SetupIntent status: %s</string>
    <string name="create_payment_method_header">Create Payment Method</string>
    <string name="create_source_header">Create Source</string>
    <string name="paymentMethods">Payment Methods</string>
    <string name="create_payment_method">Create Payment Method</string>
    <string name="creating_payment_intent">Creating PaymentIntent&#8230;</string>
    <string name="creating_setup_intent">Creating SetupIntent&#8230;</string>
    <string name="URL_UPDATE_EMPLOYEE_GEOFENCE">http://mmthinkbiz.com/MobileService.aspx/getds?method=UpdateEmoloyeeGeofence</string>
    <string name="GET_ORDER_DETAIL">method=GetOrderDetail</string>
    <string name="GET_ORDER_DETAIL1">method=GetOrderDetail_New_2</string>
    <string name="GET_ORDER_DETAIL_MP">method=GetOrderDetail_New</string>
    <string name="GET_ORDER_DETAIL_GR">method=GetGRDetail</string>
    <string name="GET_REWARD_DETAIL">method=RewardTransactionDetail</string>
    <string name="GET_ITEM_HISTORY">method=Itemorderhistory</string>
    <string name="ORDER_CREDIT">method=OrderCreditSummary</string>
    <string name="Meeting_REPORT">method=VisitMeetingDetail</string>
    <string name="CREDIT_RETURN">method=UpdateCreditReturn</string>
    <string name="GET_WALLET_DETAIL">method=WalletTransactionDetail</string>
    <string name="GET_TAT_REPORT">method=OrderTatReport</string>
    <string name="GET_ORDER_DETAIL_GR_NEW">method=GetGRDetail_New</string>
    <string name="GET_ORDER_DETAIL_SKART">method=GetOrderDetail_New</string>
    <string name="URL_CUSTOMER_CREDIT">method=CustomerCreditSummary</string>
    <string name="GET_ORDER_BY_ITEM">method=Orderhistorybyitem</string>
    <string name="GET_SUPPLIERS_BY_ITEM">method=itemsupplierchk</string>
    <string name="GET_DELIVERY_BOYS">method=GetDeliveryBoyList</string>
    <string name="GET_STORE_ORDER_DETAIL">mmethod=GetStoreOrderDetail</string>
    <string name="URL_DASHBOARD">method=GetTruckDashboards</string>
    <string name="URL_GET_CATEGORY_CODE">method=GetCatCode</string>
    <string name="URL_UPDATE_ORDER_STATUS">method=updateorderstatus</string>
    <string name="URL_UPLOAD_COMPLAINT_TABLE">method=createcomplaint</string>
    <string name="TEST_URL_ASSIGN_RATING">method=assignrating</string>
    <string name="TEST_URL_ASSIGN_ORDER_RATING">method=groceryrating</string>
    <string name="URL_UPLOAD_DOC">method=uploaddocumentdetail</string>
    <string name="ORDER_ITEM_DETAIL">method=orderitemdetail</string>
    <string name="WEEKLY_REPORTS">method=weeksalereport</string>
    <string name="BRANCH_REPORTS">method=GetBranchDateWiseSaleReport</string>
    <string name="STORE_WISE_REPORTS">method=StoreWiseCurrentStock</string>
    <string name="ALL_BRANCHES">http://mmthinkbiz.com/MobileService.aspx?method=MainSafeoKartStore_Web</string>
    <string name="ITEM_REPORTS">method=SalesAnalysisItem</string>
    <string name="GROUP_REPORTS">method=SalesAnalysisGroup</string>
    <string name="URL_UPDATE_ATTENDANCE_DETAIL">method=uploadattendancechange</string>
    <string name="URL_GET_ATTENDANCE_DETAIL_CHANGE">method=getattendancechangedetail</string>
    <string name="URL_GIVE_ATTENDANCE">method=MobileAttendanceNew</string>
    <string name="URL_GET_ROASTER_SUMMARY">method=GetRoasterSummary</string>
    <string name="spinner_title">Select WorkType</string>
    <string name="RosterVehicleAssign">method=UpdateRoasterVehicleAssign</string>
    <string name="URL_UPDATE_VEHICLE_ASSIGN">method=UpdateRoasterVehicleAssign</string>
    <string name="GetAssignVehicle">method=GetAssignVehicle</string>
    <string name="URL_GET_CHALLAN_DETAIL">method=Getchallandetail</string>
    <string name="URL_Upload_Cheque_Collect">method=uploadchequecollect</string>
    <string name="URL_WORK_ORDER_STATUS">method=updateflag</string>
    <string name="URL_UPDATE_DELIVERY_FLAG">method=updatedeliveryflag</string>
    <string name="URL_CREATE_CHALLAN_DETAIL">method=createchallandetail</string>
    <string name="URL_Upload_TRUCK_TRIP_LATEST">method=ITSTrip_Web_Emp_Mobile</string>
    <string name="URL_Upload_TRUCK_TRIP_ADD_CONSIGNEE">method=AddRosterDestination</string>
    <string name="URL_GET_CONTACTBOOK">method=GetContactBook</string>
    <string name="URL_Upload_Expenses">method=uploadexpenses</string>
    <string name="URL_GETTRUCKTRIP">method=GetTruckTrip</string>
    <string name="URL_GETTRUCK_DASHBOARD_MAIN">method=GetTruckDashboards_Main</string>
    <string name="URL_TRUCK_DASHBOARD_NEW">method=GetTruckDashboards_New</string>
    <string name="URL_TRUCK_FINAL_TRANSACTIONS">method=truckfinancialtransactions</string>
    <string name="URL_GET_EXPENSE_REPORT_RESULT">method=getexpensereport</string>
    <string name="URL_GET_PROFILE">method=GetUserProfileInfo</string>
    <string name="URL_GET_ALL_IMAGES">method=GetALLImages</string>
    <string name="URL_GET_DRIVER_REPORT_TRUCK">method=GetTripReportTruck</string>
    <string name="URL_DELETE_DOC">http://www.mmthinkbiz.com/mobileservice.aspx?method=deletedocfile</string>
    <string name="URL_GET_DRIVER_TRIP_EXP_SUMMARY">method=Getdrivertripexpsummary</string>
    <string name="URL_CREATE_TRIP">method=ITSTrip_Web_Emp_Mobile</string>
    <string name="URL_CREATE_TRIP1">method=InsertRosterCallhistory</string>
    <string name="URL_GEOFENCE">method=GeofenceDetailsGrocery</string>
    <string name="URL_CREATE_TRIP2">method=Insertmanualtripedit</string>
    <string name="URL_USAGE_REPORT">method=GetUsagesreport</string>
    <string name="URL_CREATE_GEOFENCE">method=CreateMobile_Geofence</string>
    <string name="URL_CREATE_TRIP3">method=vehiclereassign</string>
    <string name="URL_CALL_HISTORY">method=Showcallhistory</string>
    <string name="email">Email :</string>
    <string name="enable">Enable Notification</string>
    <string name="error">Error in Retrieving Data</string>
    <string name="exit">Press again to exit</string>
    <string name="forgot_pass"><u>Forgot Password</u></string>
    <string name="strexplore"><u>I JUST WANNA EXPLORE</u></string>
    <string name="nospam">Don\'t worry ! We\'ll not spam you.</string>
    <string name="hills">Hills</string>
    <string name="pth">D:\\uploadeddocuments\\</string>
    <string name="image">image</string>
    <string name="intern">Please check your internet</string>
    <string name="km_ran">Nearby KM Range</string>
    <string name="vehicle_lock">Green color represents <b>Lock</b> vehicle .</string>
    <string name="vehicle_unlock">Red color represents <b>UnLock</b> vehicle .</string>
    <string name="vehicle_onignition">Green color represents <b>Ignition On</b> vehicle .</string>
    <string name="vehicle_offignition">Red color represents <b>Ignition Off </b> Vehicle .</string>
    <string name="vehicle_battery">This icon represents vehicle <b>Battery</b>.</string>
    <string name="vehicle_gpssignal">This icon represents vehicle <b>Gps Signal</b>.</string>
    <string name="donut_idle">Yellow color represents <b>Idle</b> vehicle .</string>
    <string name="donut_nosignal">Red color represents having <b>No signal</b> vehicle .</string>
    <string name="donut_running">Green color represents <b>Running</b> vehicle .</string>
    <string name="donut_all">Sky blue represents <b>All </b> Vehicle .</string>
    <string name="chart_0">Green color represents <b>0-2</b> hours vehicle idle time .</string>
    <string name="chart_2">Yellow color represents <b>2-4</b> hours vehicle idle time .</string>
    <string name="chart_4">Dark yellow color represents <b>4-6</b> hours vehicle idle time .</string>
    <string name="chart_6">Yellow color represents <b>6-8</b> hours vehicle idle time .</string>
    <string name="chart_8">Orange color represents <b>8-10</b> hours vehicle idle time .</string>
    <string name="chart_10">Red color represents <b>10+</b> hours vehicle idle time .</string>
    <string name="vehicle_load1">Yellow color represents <b>Empty</b> vehicle  .</string>
    <string name="vehicle_load2">Green color represents Vehicle <b>Loading</b> Status .</string>
    <string name="vehicle_unload1">Skyblue color represents <b>Loaded</b> vehicle .</string>
    <string name="vehicle_unload2">Green color represents Vehicle <b>Unloading</b> .</string>
    <string name="donut_trip_closed">Green color represents <b>Closed</b> vehicle .</string>
    <string name="donut_trip_nosignal">Yellow color represents having <b>No signal</b> vehicle .</string>
    <string name="donut_trip_opened">Red color represents <b>Opened</b> vehicle .</string>
    <string name="donut_trip_powercut">Sky blue represents <b>Power cut</b> Vehicle .</string>
    <string name="donut_trip_all">Yellow color represents <b>All</b> vehicle .</string>
    <string name="loading">There is some problem in loading</string>
    <string name="verification_code_subtext">Please type the verification code sent to +xxxxxxxxxx</string>
    <string name="verification_code">Verification Code</string>
    <string name="validate">Verify</string>
    <string name="resend">Didn\'t recevied yet ? </string>
    <string name="resend1">Resend</string>
</resources>