<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#04C7F8"
    android:orientation="vertical">

    <Button
        android:id="@+id/backbtnicon"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="150dp"
        android:text="Back"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="72dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/app_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/verification_code"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="makeResendClick"
            android:text="@string/verification_code_subtext"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:layout_marginTop="72dp"
            android:background="@drawable/bg_spinner_blue_new"
            android:padding="4dp" />
        <!--
                <com.mukesh.OtpView
                    android:id="@+id/otp_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="72dp"
                    android:inputType="number"
                    android:itemBackground="@drawable/bg_otp_item"
                    android:textColor="@color/colorAccent"
                    app:hideLineWhenFilled="true"
                    app:itemCount="4"
                    app:itemSpacing="6dp"
                    app:lineColor="@color/white"
                    app:viewType="line" />
        -->

        <Button
            android:id="@+id/validateButton"
            style="@style/AppTheme.RoundedCornerMaterialButtonNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minWidth="150dp"
            android:text="@string/validate" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txtResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/resend1"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
