<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/date_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/tpL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Base_color">

        <ImageView
            android:id="@+id/imgBackBtnNew"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:src="@drawable/back_icon" />

        <TextView

            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:padding="7dp"
            android:text="Payment"
            android:textColor="#ffffff"
            android:textSize="22dp" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tpL">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
         android:layout_height="match_parent">

        <com.yekmer.cardlib.CreditCardEditText
            android:id="@+id/credit_card_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:maxLines="1"
            android:maxLength="19"
            android:singleLine="true"
            android:hint="@string/payment_credit_card_number_hint"
            android:background="@drawable/bg_card"
            android:padding="@dimen/input_field_side_margin"
            android:drawableLeft="@drawable/ic_edittext_card_selector"
            android:drawableStart="@drawable/ic_edittext_card_selector"
            android:drawablePadding="@dimen/input_field_drawable_padding"
            android:paddingLeft="@dimen/inside_card_margin"
            android:paddingRight="@dimen/inside_card_margin"
            android:layout_margin="@dimen/input_field_side_margin"
            android:imeOptions="actionNext"
            android:inputType="phone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/et_fragment_add_credit_card_expiry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"
                android:maxLength="5"
                android:singleLine="true"
                android:background="@drawable/bg_card"
                android:padding="@dimen/input_field_side_margin"
                android:layout_margin="@dimen/input_field_side_margin"
                android:layout_weight="1"
                android:hint="@string/payment_expiration_hint"
                android:drawableLeft="@drawable/ic_edittext_calendar_selector"
                android:drawableStart="@drawable/ic_edittext_calendar_selector"
                android:drawablePadding="@dimen/input_field_drawable_padding"
                android:paddingLeft="@dimen/inside_card_margin"
                android:paddingRight="@dimen/inside_card_margin"
                android:includeFontPadding="false"
                android:imeOptions="actionNext"
                android:inputType="datetime"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"
                android:maxLength="4"
                android:singleLine="true"
                android:background="@drawable/bg_card"
                android:padding="@dimen/input_field_side_margin"
                android:layout_margin="@dimen/input_field_side_margin"
                android:layout_weight="1"
                android:id="@+id/cardCVV"
                android:hint="@string/payment_credit_card_cvc_hint"
                android:drawableLeft="@drawable/ic_edittext_lock_selector"
                android:drawableStart="@drawable/ic_edittext_lock_selector"
                android:drawablePadding="@dimen/input_field_drawable_padding"
                android:paddingLeft="@dimen/inside_card_margin"
                android:paddingRight="@dimen/inside_card_margin"
                android:includeFontPadding="false"
                android:inputType="number"
                android:imeOptions="actionDone"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnPay"
            android:layout_width="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blu_shp"
            android:text="PAY "
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white" />

    </LinearLayout>
</RelativeLayout>    </ScrollView>


</RelativeLayout>